--- a/src/app/product-manage/components/product-add/product-add.component.html
+++ b/src/app/product-manage/components/product-add/product-add.component.html
@@ -14,24 +14,27 @@
   </p>
 </div>
 
-<div *ngIf="product; then created; else uncreate"></div>
-<ng-template #uncreate>
-  <div class="container-fluid my-3">
-    <div class="row">
-      <div class="col-md-1 col-0"></div>
-      <form
-        class="col-md-10 col-12 bg-white rounded p-3"
+<div class="container-fluid my-3">
+  <div class="row">
+    <div class="col-md-1 col-0"></div>
+    <form
+      class="col-md-10 col-12"
+      id="productForm"
+      enctype="multipart/form-data"
+      #productForm="ngForm"
+    >
+      <div
+        class="bg-white rounded p-3"
         style="
           box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
             rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
         "
-        id="productForm"
-        enctype="multipart/form-data"
-        #productForm="ngForm"
       >
+        <p class="fw-bold">{{ 'product.product-info' | translate }}</p>
+
         <div class="row justify-content-between text-left">
           <!-- name -->
-          <div class="form-group col-sm-6 flex-column d-flex">
+          <div class="form-group col-12 flex-column d-flex">
             <label class="form-control-label px-3">
               {{ 'product.product-name' | translate }}
               <span class="text-danger">*</span>
@@ -46,7 +49,6 @@
               required
             />
             <small
-              id="nameHid"
               class="form-text mx-3 text-muted"
               *ngIf="
                 !productName?.valid &&
@@ -56,10 +58,13 @@
               {{ 'notification.invalid-product-name' | translate }}
             </small>
           </div>
+        </div>
+        <div class="row justify-content-between text-left">
           <!-- brand -->
-          <div class="form-group col-sm-6 flex-column d-flex">
+          <div class="form-group col-sm-4 flex-column d-flex">
             <label class="form-control-label px-3">
               {{ 'brands' | translate }}
+              <span class="text-danger">*</span>
             </label>
 
             <select
@@ -74,93 +79,62 @@
               </option>
             </select>
             <small
-              id="usernameHid"
               class="form-text text-muted"
               *ngIf="!brand?.valid && (brand?.dirty || brand?.touched)"
             >
               {{ 'notification.invalid-brand' | translate }}
             </small>
           </div>
-        </div>
-
-        <p class="fw-bold">Thông số kĩ thuật</p>
-        <div class="row justify-content-between text-left">
-          <div class="form-group col-sm-2 flex-column d-flex">
+          <!-- origin -->
+          <div class="form-group col-sm-4 flex-column d-flex">
             <label class="form-control-label px-3">
-              Core
+              {{ 'product.origin' | translate }}
+              <span class="text-danger">*</span>
             </label>
             <input
               class="text-capitalize"
               ngModel
-              name="width"
+              #origin="ngModel"
+              name="origin"
+              placeholder="{{ 'placeholder.input-origin' | translate }}"
               type="text"
               required
             />
+            <small
+              class="form-text text-muted"
+              *ngIf="!origin?.valid && (origin?.dirty || origin?.touched)"
+            >
+              {{ 'notification.invalid-origin' | translate }}
+            </small>
           </div>
 
-          <div class="form-group col-sm-2 flex-column d-flex">
+          <!-- warranty-time -->
+          <div class="form-group col-sm-4 flex-column d-flex">
             <label class="form-control-label px-3">
-              CPU
+              {{ 'product.warranty-time' | translate }}
+              <span class="text-danger">*</span>
             </label>
             <input
               class="text-capitalize"
               ngModel
-              name="width"
+              #warrantyTime="ngModel"
+              name="warranty_time"
+              placeholder="{{ 'placeholder.input-warranty-time' | translate }}"
               type="text"
               required
             />
-          </div>
-
-          <div class="form-group col-sm-2 flex-column d-flex">
-            <label class="form-control-label px-3">
-              Width
-            </label>
-            <input
-              class="text-capitalize"
-              ngModel
-              name="width"
-              type="text"
-              required
-            />
-          </div>
-          <div class="form-group col-sm-2 flex-column d-flex">
-            <label class="form-control-label px-3">
-              Height
-            </label>
-            <input
-              class="text-capitalize"
-              ngModel
-              name="width"
-              type="text"
-              required
-            />
-          </div>
-          <div class="form-group col-sm-2 flex-column d-flex">
-            <label class="form-control-label px-3">
-              Weight
-            </label>
-            <input
-              class="text-capitalize"
-              ngModel
-              name="width"
-              type="text"
-              required
-            />
-          </div>
-          <div class="form-group col-sm-2 flex-column d-flex">
-            <label class="form-control-label px-3">
-              Lenght
-            </label>
-            <input
-              class="text-capitalize"
-              ngModel
-              name="width"
-              type="text"
-              required
-            />
+            <small
+              class="form-text mx-3 text-muted"
+              *ngIf="
+                !warrantyTime?.valid &&
+                (warrantyTime?.dirty || warrantyTime?.touched)
+              "
+            >
+              {{ 'notification.invalid-warranty-time' | translate }}
+            </small>
           </div>
         </div>
-
+        <!-- mô tả -->
         <div class="row justify-content-between text-left">
           <div class="form-group col-12 flex-column d-flex">
             <label class="form-control-label px-3">
@@ -175,36 +149,362 @@
             ></textarea>
           </div>
         </div>
+      </div>
 
-        <button (click)="createProduct()" class="btn btn-primary float-end">
-          {{ 'save' | translate }}
-        </button>
-      </form>
-      <div class="col-md-1 col-0"></div>
-    </div>
+      <!-- ------------------------------------------------------------------------------------------------ -->
+      <div
+        class="bg-white rounded p-3 mt-4"
+        style="
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
+            rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+        "
+      >
+        <p class="fw-bold">{{ 'product.specifications' | translate }}</p>
+        <div class="row justify-content-between text-left">
+          <div class="form-group col-sm-4 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.system' | translate }}
+              <span class="text-danger">*</span>
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="system"
+              type="text"
+              required
+            />
+          </div>
+
+          <div class="form-group col-sm-4 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.core' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="core"
+              type="text"
+              required
+            />
+          </div>
+
+          <div class="form-group col-sm-4 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.CPU' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="CPU"
+              type="text"
+              required
+            />
+          </div>
+        </div>
+        <div class="row justify-content-between text-left">
+          <div class="form-group col-sm-4 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.ram' | translate }}
+            </label>
+            <select
+              #ram="ngModel"
+              required
+              ngModel
+              name="ramId"
+              class="form-select"
+            >
+              <option *ngFor="let item of ramList" [value]="item.id">
+                {{ item.name }}
+              </option>
+            </select>
+            <small
+              class="form-text text-muted"
+              *ngIf="!ram?.valid && (ram?.dirty || ram?.touched)"
+            >
+              {{ 'notification.invalid-ram' | translate }}
+            </small>
+          </div>
+          <div class="form-group col-sm-4 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.rom' | translate }}
+            </label>
+            <select
+              #rom="ngModel"
+              required
+              ngModel
+              name="romId"
+              class="form-select"
+            >
+              <option *ngFor="let item of romList" [value]="item.id">
+                {{ item.name }}
+              </option>
+            </select>
+            <small
+              class="form-text text-muted"
+              *ngIf="!rom?.valid && (rom?.dirty || rom?.touched)"
+            >
+              {{ 'notification.invalid-rom' | translate }}
+            </small>
+          </div>
+          <div class="form-group col-sm-4 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.GPU' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="GPU"
+              type="text"
+              required
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- ------------------------------------------------------------------------------------------------ -->
+      <div
+        class="bg-white rounded p-3 mt-4"
+        style="
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
+            rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+        "
+      >
+        <p class="fw-bold">{{ 'product.design' | translate }}</p>
+        <div class="row justify-content-between text-left">
+          <div class="form-group col-sm-6 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.camera' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="camera"
+              type="text"
+              required
+            />
+          </div>
+
+          <div class="form-group col-sm-6 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.camera-selfie' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="camera_selfie"
+              type="text"
+              required
+            />
+          </div>
+        </div>
+        <div class="row justify-content-between text-left">
+          <div class="form-group col-sm-4 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.color' | translate }}
+            </label>
+            <select
+              #color="ngModel"
+              required
+              ngModel
+              name="colorId"
+              class="form-select"
+            >
+              <option *ngFor="let item of colorList" [value]="item.id">
+                {{ item.name }}
+              </option>
+            </select>
+            <small
+              id="colorHid"
+              class="form-text text-muted"
+              *ngIf="!color?.valid && (color?.dirty || color?.touched)"
+            >
+              {{ 'notification.invalid-color' | translate }}
+            </small>
+          </div>
+
+          <div class="form-group col-sm-4 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.screen' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="screen"
+              type="text"
+              required
+            />
+          </div>
+
+          <div class="form-group col-sm-4 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.material' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="material"
+              type="text"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="row justify-content-between text-left">
+          <div class="form-group col-sm-3 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.width' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="width"
+              type="text"
+              required
+            />
+          </div>
+
+          <div class="form-group col-sm-3 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.height' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="height"
+              type="text"
+              required
+            />
+          </div>
+
+          <div class="form-group col-sm-3 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.weight' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="weight"
+              type="text"
+              required
+            />
+          </div>
+          <div class="form-group col-sm-3 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.length' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="length"
+              type="text"
+              required
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- ------------------------------------------------------------------------------------------------ -->
+      <div
+        class="bg-white rounded p-3 mt-4"
+        style="
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
+            rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+        "
+      >
+        <p class="fw-bold">{{ 'product.prices' | translate }}</p>
+        <div class="row justify-content-between text-left">
+          <div class="form-group col-sm-6 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.price' | translate }} (VNĐ)
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="original_price"
+              min="0"
+              type="number"
+              required
+            />
+            <small
+              class="form-text text-muted"
+              *ngIf="!color?.valid && (color?.dirty || color?.touched)"
+            >
+              {{ 'notification.invalid-color' | translate }}
+            </small>
+          </div>
+
+          <div class="form-group col-sm-6 flex-column d-flex">
+            <label class="form-control-label px-3">
+              {{ 'product.quantity' | translate }}
+            </label>
+            <input
+              class="text-capitalize"
+              ngModel
+              name="quantity"
+              min="0"
+              type="number"
+              required
+            />
+            <small
+              class="form-text text-muted"
+              *ngIf="!color?.valid && (color?.dirty || color?.touched)"
+            >
+              {{ 'notification.invalid-color' | translate }}
+            </small>
+          </div>
+        </div>
+      </div>
+
+      <!-- ------------------------------------------------------------------------------------------------ -->
+      <div
+        class="bg-white rounded p-3 mt-4"
+        style="
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
+            rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+        "
+      >
+        <p class="fw-bold">Thêm hình ảnh sản phẩm</p>
+        <div class="row justify-content-between text-left">
+          <div class="form-group row flex-column d-flex">
+            <div class="d-flex row">
+              <label
+                *ngFor="let item of imageSrc"
+                class="col-sm-2 col-4 d-flex"
+              >
+                <img
+                  [src]="
+                    item || 'https://bootdey.com/img/Content/avatar/avatar7.png'
+                  "
+                  class="avatar img-circle img-thumbnail"
+                  alt="avatar"
+                />
+              </label>
+            </div>
+            <div class="w-50 mt-4">
+              <input
+                (change)="filechange($event)"
+                type="file"
+                id="image1"
+                multiple
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row rounded mt-3 justify-content-between text-left">
+        <div class="col-sm-6 col-0"></div>
+        <div class="col-sm-4 col-6">
+          <button class="btn btn-primary w-100" (click)="createProduct()">
+            {{ 'save' | translate }}
+          </button>
+        </div>
+        <div class="col-sm-2 col-6">
+          <button class="btn btn-secondary w-100">
+            {{ 'cancel' | translate }}
+          </button>
+        </div>
+      </div>
+    </form>
+    <div class="col-md-1 col-0"></div>
   </div>
-</ng-template>
-<ng-template #created>
-  <div
-    class="container-fluid bg-white rounded p-3"
-    style="
-      box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
-        rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
-    "
-  >
-    <div class="d-flex">
-      <p class="fw-bold" style="padding-right: 10px;">
-        {{ 'product.product-name' | translate }}:
-      </p>
-      <p class="fs-3">
-        {{ productInfo?.name }}
-      </p>
-    </div>
-    <div class="d-flex">
-      <p class="fw-bold" style="padding-right: 10px;">
-        {{ 'brands' | translate }}:
-      </p>
-      <p class="text-danger">{{ productInfo?.brand }}</p>
-    </div>
-  </div>
-</ng-template>
+</div>
