--- a/src/app/product-manage/containers/product/product.component.html
+++ b/src/app/product-manage/containers/product/product.component.html
@@ -32,7 +32,7 @@
           {{ 'brands' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          <div class="text-capitalize">{{ element.brand }}</div>
+          <div class="text-capitalize">{{ element.brand.name }}</div>
         </td>
       </ng-container>
 
@@ -40,14 +40,14 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ 'product.product' | translate }}
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.product }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="stock">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ 'warehouse.warehouse' | translate }}
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
       </ng-container>
 
       <ng-container matColumnDef="sold">
@@ -55,7 +55,7 @@
           {{ 'product.sold' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.sold }}
+          {{ element?.sold_quantity ? element?.sold_quantity : '0' }}
         </td>
       </ng-container>
 
@@ -64,7 +64,16 @@
           {{ 'publish' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.publish }}
+          <div class="form-check form-switch">
+            <input
+              (click)="confirmUpdate(element.id, element.published)"
+              class="form-check-input"
+              style="width: 45px; height: 22px;"
+              type="checkbox"
+              id="flexSwitchCheckDefault"
+              [checked]="element.published"
+            />
+          </div>
         </td>
       </ng-container>
 
