--- a/src/app/user-manage/components/user-add/add-user.component.html
+++ b/src/app/user-manage/components/user-add/add-user.component.html
@@ -10,7 +10,7 @@
         class="btn border-0 circle"
         matRipple
         [matRippleCentered]="true"
-        routerLink="/employee"
+        (click)="goBack()"
       >
         <mat-icon title="back" class="fs-2 mt-1 fw-bold">
           keyboard_backspace
