--- a/src/app/product-manage/components/product-add/product-add.component.html
+++ b/src/app/product-manage/components/product-add/product-add.component.html
@@ -3,7 +3,7 @@
     class="btn border-0 circle"
     matRipple
     [matRippleCentered]="true"
-    routerLink="/product"
+    (click)="goBack()"
   >
     <mat-icon title="back" class="fs-2 mt-1 fw-bold">
       keyboard_backspace
@@ -210,7 +210,7 @@
               #ram="ngModel"
               required
               ngModel
-              name="ramId"
+              name="ramOptionId"
               class="form-select"
             >
               <option *ngFor="let item of ramList" [value]="item.id">
@@ -232,7 +232,7 @@
               #rom="ngModel"
               required
               ngModel
-              name="romId"
+              name="romOptionId"
               class="form-select"
             >
               <option *ngFor="let item of romList" [value]="item.id">
@@ -306,7 +306,7 @@
               #color="ngModel"
               required
               ngModel
-              name="colorId"
+              name="colorOptionId"
               class="form-select"
             >
               <option *ngFor="let item of colorList" [value]="item.id">
@@ -352,7 +352,7 @@
         <div class="row justify-content-between text-left">
           <div class="form-group col-sm-3 flex-column d-flex">
             <label class="form-control-label px-3">
-              {{ 'product.width' | translate }}
+              {{ 'product.width' | translate }} (mm)
             </label>
             <input
               class="text-capitalize"
@@ -365,7 +365,7 @@
 
           <div class="form-group col-sm-3 flex-column d-flex">
             <label class="form-control-label px-3">
-              {{ 'product.height' | translate }}
+              {{ 'product.height' | translate }}(mm)
             </label>
             <input
               class="text-capitalize"
@@ -378,7 +378,7 @@
 
           <div class="form-group col-sm-3 flex-column d-flex">
             <label class="form-control-label px-3">
-              {{ 'product.weight' | translate }}
+              {{ 'product.weight' | translate }}(gram)
             </label>
             <input
               class="text-capitalize"
@@ -390,7 +390,7 @@
           </div>
           <div class="form-group col-sm-3 flex-column d-flex">
             <label class="form-control-label px-3">
-              {{ 'product.length' | translate }}
+              {{ 'product.length' | translate }} (mm)
             </label>
             <input
               class="text-capitalize"
@@ -418,7 +418,7 @@
               {{ 'product.price' | translate }} (VNĐ)
             </label>
             <input
-              class="text-capitalize"
+              class="fs-4 fw-bold text-danger"
               ngModel
               name="original_price"
               min="0"
@@ -438,7 +438,7 @@
               {{ 'product.quantity' | translate }}
             </label>
             <input
-              class="text-capitalize"
+              class="fs-4"
               ngModel
               name="quantity"
               min="0"
@@ -471,13 +471,24 @@
                 *ngFor="let item of imageSrc"
                 class="col-sm-2 col-4 d-flex"
               >
-                <img
-                  [src]="
-                    item || 'https://bootdey.com/img/Content/avatar/avatar7.png'
-                  "
-                  class="avatar img-circle img-thumbnail"
-                  alt="avatar"
-                />
+                <div class="mt-3 position-relative">
+                  <img
+                    [src]="item"
+                    class="avatar img-circle img-thumbnail"
+                    alt="avatar"
+                  />
+
+                  <span
+                    (click)="filterList(item)"
+                    style="cursor: pointer;"
+                    class="icon p-0 d-flex position-absolute top-0 justify-items-center start-100 translate-middle badge unded-pill"
+                  >
+                    <i
+                      style="padding: 3px;"
+                      class="bi icon bi-x-lg fs-5 text-black border rounded-circle"
+                    ></i>
+                  </span>
+                </div>
               </label>
             </div>
             <div class="w-50 mt-4">
@@ -485,8 +496,11 @@
                 (change)="filechange($event)"
                 type="file"
                 id="image1"
+                class="d-none"
                 multiple
               />
+              <label class="btn btn-warning w-50" for="image1">Chọn file</label>
+              <span>{{ imageList.length }} file</span>
             </div>
           </div>
         </div>
