--- a/src/app/product-manage/containers/product/product.component.html
+++ b/src/app/product-manage/containers/product/product.component.html
@@ -14,7 +14,9 @@
   <div>
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'id' | translate }}
+        </th>
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
 
@@ -40,7 +42,28 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ 'product.product' | translate }}
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <td mat-cell *matCellDef="let element">
+          <div class="d-flex align-items-center py-2">
+            <img
+              class="avatar img-fluid"
+              [src]="
+                'http://localhost:5000' +
+                  (element?.product_images)['0']?.image ||
+                'https://bootdey.com/img/Content/avatar/avatar7.png'
+              "
+              style="height: 110px;"
+            />
+            <div class="d-block px-3">
+              <p class="fs-4 fw-bold m-auto mt-3 text-black-50">
+                {{ element.name }}
+              </p>
+              <p>
+                ({{ element?.rom_option?.name }} -
+                {{ element?.color_option?.name }})
+              </p>
+            </div>
+          </div>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="stock">
@@ -82,14 +105,14 @@
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
           <button
-            [routerLink]="['/viewUser', element.id]"
+            [routerLink]="['/product/view', element.id]"
             title="{{ 'view' | translate }}"
             mat-icon-button
           >
             <mat-icon>launch</mat-icon>
           </button>
           <button
-            [routerLink]="['/editUser', element.id]"
+            [routerLink]="['/product/edit', element.id]"
             title="{{ 'edit' | translate }}"
             mat-icon-button
           >
