--- a/src/app/supplier-manage/components/supplier-add/add-supplier.component.html
+++ b/src/app/supplier-manage/components/supplier-add/add-supplier.component.html
@@ -3,7 +3,7 @@
     class="btn border-0 circle"
     matRipple
     [matRippleCentered]="true"
-    routerLink="/supplier"
+    (click)="goBack()"
   >
     <mat-icon title="back" class="fs-2 mt-1 fw-bold">
       keyboard_backspace
