--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -86,7 +86,7 @@
     <mat-icon>image</mat-icon>
     <div class="px-2">{{ 'banner' | translate }}</div>
   </a>
-  <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
+  <a mat-list-item routerLink="/coupons" routerLinkActive="list-item-active">
     <mat-icon>card_giftcard</mat-icon>
     <div class="px-2">{{ 'order.discount-code' | translate }}</div>
   </a>
