--- a/src/app/product-manage/containers/product/product.component.html
+++ b/src/app/product-manage/containers/product/product.component.html
@@ -10,7 +10,7 @@
     {{ 'add' | translate }}
   </button>
 </div>
-<div class="container-fluid">
+<div class="container-fluid px-3">
   <div>
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="id">
