--- a/src/app/user-manage/containers/customer-manage/customer-manage.component.html
+++ b/src/app/user-manage/containers/customer-manage/customer-manage.component.html
@@ -3,7 +3,7 @@
     {{ 'user.list-customer' | translate }}
   </p>
 </div>
-<div class="container-fluid">
+<div class="container-fluid px-3">
   <div>
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="id">
