--- a/src/app/coupons-manage/containers/coupons/coupons.component.html
+++ b/src/app/coupons-manage/containers/coupons/coupons.component.html
@@ -1,10 +1,10 @@
 <div class="nav navbar mt-4 mb-5 mx-3 d-block">
   <p class="fs-3 fw-bold float-start text-primary">
-    {{ 'brand.list-brand' | translate }}
+    {{ 'coupons.coupons-list' | translate }}
   </p>
   <button
-    (click)="dialogAddBrand()"
-    title="{{ 'user.create-user' | translate }}"
+    (click)="dialogAddCoupons()"
+    title="{{ 'coupons.coupons-list' | translate }}"
     class="btn btn-primary float-end px-4 py-2"
   >
     <a class="text-white">
@@ -33,23 +33,66 @@
         </td>
       </ng-container>
 
-      <!-- name Column -->
-      <ng-container matColumnDef="name">
+      <!-- discount-code Column -->
+      <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ 'brand.name' | translate }}
+          {{ 'coupons.code' | translate }}
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.code }}</td>
       </ng-container>
 
-      <!-- publish Column -->
-      <ng-container matColumnDef="published">
+      <!-- start date Column -->
+      <ng-container matColumnDef="start_date">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ 'brand.published' | translate }}
+          {{ 'coupons.start-date' | translate }}
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.start_date | date: 'short' }}
+        </td>
+      </ng-container>
+
+      <!-- end date Column -->
+      <ng-container matColumnDef="end_date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'coupons.end-date' | translate }}
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.end_date | date: 'short' }}
+        </td>
+      </ng-container>
+
+      <!-- quantity Column -->
+      <ng-container matColumnDef="quantity">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'product.quantity' | translate }}
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
+      </ng-container>
+
+      <!-- used_quantity Column -->
+      <ng-container matColumnDef="used_quantity">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'coupons.used-quantity' | translate }}
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.used_quantity }}</td>
+      </ng-container>
+
+      <!-- discount value Column -->
+      <ng-container matColumnDef="discount_value">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'coupons.discount-value' | translate }}
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.discount_value }}</td>
+      </ng-container>
+
+      <!-- disabled Column -->
+      <ng-container matColumnDef="disabled">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'coupons.disabled' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
           <div class="form-check form-switch">
             <input
-              (click)="confirmUpdate(element.id, element.published)"
               class="form-check-input"
               style="width: 45px; height: 22px;"
               type="checkbox"
@@ -65,7 +108,7 @@
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
           <button
-            (click)="dialogUpdateBrand(element.id)"
+            (click)="dialogUpdateCoupons(element?.id)"
             title="{{ 'edit' | translate }}"
             mat-icon-button
           >
@@ -73,7 +116,7 @@
           </button>
 
           <button
-            (click)="confirmDialog(element.id)"
+            (click)="confirmDialog(element?.id)"
             title="{{ 'delete' | translate }}"
             mat-icon-button
           >
@@ -84,7 +127,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-
     <mat-paginator
       #paginator
       [length]="PageInfo.total ? PageInfo.total : 100"
