--- a/src/app/product-configuration/containers/rom/rom.component.html
+++ b/src/app/product-configuration/containers/rom/rom.component.html
@@ -12,7 +12,7 @@
   </button>
 </div>
 
-<div>
+<div class="container-fluid px-3">
   <table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
