--- a/src/app/user-manage/components/user-edit/edit-user.component.html
+++ b/src/app/user-manage/components/user-edit/edit-user.component.html
@@ -123,7 +123,7 @@
             <div class="col-9">
               <input
                 #birthdate="ngModel"
-                name="birth_date"
+                name="birthdate"
                 class="form-control input-customize"
                 aria-describedby="birthdate"
                 type="date"
