--- a/src/app/user-manage/containers/employee-manage/employee-manage.component.html
+++ b/src/app/user-manage/containers/employee-manage/employee-manage.component.html
@@ -11,7 +11,7 @@
     </a>
   </button>
 </div>
-<div class="container-fluid">
+<div class="container-fluid px-3">
   <div>
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="id">
