--- a/src/app/warehouse-manage/containers/receipts-list/receipts-list.component.html
+++ b/src/app/warehouse-manage/containers/receipts-list/receipts-list.component.html
@@ -1,1 +1,95 @@
-<p>receipts-list works!</p>
+<div class="nav navbar mt-4 mb-5 mx-3 d-block">
+  <p class="fs-3 fw-bold float-start text-primary">
+    {{ 'warehouse.list-receipt-note' | translate }}
+  </p>
+  <button
+    title="{{ 'user.create-user' | translate }}"
+    class="btn btn-primary float-end px-4 py-2"
+  >
+    <a class="text-white" routerLink="add">
+      {{ 'add' | translate }}
+    </a>
+  </button>
+</div>
+
+<div class="container-fluid p-3 bg-white">
+  <table mat-table [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'id' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    </ng-container>
+
+    <!-- createAt Column -->
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'regDate' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.createdAt | date: 'short' }}
+      </td>
+    </ng-container>
+    <!-- user Column -->
+    <ng-container matColumnDef="user">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'warehouse.user' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <div class="text-capitalize align-items-center d-flex">
+          <div
+            class="rounded-circle"
+            style="width: 35px; height: 35px; margin-right: 10px;"
+          >
+            <img
+              class="avatar rounded-circle img-circle"
+              alt="avatar"
+              [src]="'http://localhost:5000' + element?.user?.avatar"
+              style="width: 35px; height: 35px;"
+            />
+          </div>
+          <div style="flex: 1;">
+            {{ element?.user?.name }}
+          </div>
+        </div>
+      </td>
+    </ng-container>
+
+    <!-- supplier Column -->
+    <ng-container matColumnDef="supplier">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'user.supplier' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element?.suppliers?.name }}</td>
+    </ng-container>
+
+    <!-- total price Column -->
+    <ng-container matColumnDef="total_price">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'total-price' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element?.total_price }}</td>
+    </ng-container>
+
+    <!-- action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <a [routerLink]="['view', element.id]">
+          <button title="{{ 'view' | translate }}" mat-icon-button>
+            <mat-icon>launch</mat-icon>
+          </button>
+        </a>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <mat-paginator
+    #paginator
+    [length]="PageInfo.total ? PageInfo.total : 100"
+    [pageSize]="10"
+    [pageSizeOptions]="[5, 10, 25, 100]"
+  ></mat-paginator>
+</div>
